--- a/css/starters.css
+++ b/css/starters.css
@@ -74,3 +74,15 @@ p {
     padding: 10px;
     text-align: center;
 }
+
+.btn{
+    padding: 20px 30px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+    border: none;
+    font-size: 20px;
+    display: block;
+    margin: 0 auto;
+}
