Edited join us section

--- a/css/starters.css
+++ b/css/starters.css
@@ -86,3 +86,9 @@ p {
     display: block;
     margin: 0 auto;
 }
+
+.btn:hover{
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
