home page updated

--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,38 @@
-body{
-background-image: url('aloobaingan.jpg');
-width: auto;
-height:auto;
+body,html{
+background-image: url("aloogobi.jpeg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+
 }
 .div1{
     display: flex;
     justify-content: right;
-    color:black;
+    color:white;
     margin-left: 10px;
-    font-size: 30px;
+    font-size: 40px;
     background-color: rgb(83, 82, 82);
-
+    
 }
 ul{
     display: flex;
 }
-ul li{
-    list-style: none;
-    margin-inline: 10px;
-}
 .logo{
     font-size: 50px;
     color: red;
-    border-bottom: 5px black;
+    border-bottom: 3px black;
     border-radius: 40px;
 }
 .btn{
-    width:60px;
-    height: 30px;
-    border: 2px solid rgba(250, 10, 10, 0.801);
-    background-color: black;
+    width:80px;
+    height: 50px;
+    border: 2px solid rgba(62, 210, 236, 0.801);
+    background-color: rgb(2, 28, 49);
     color: white;
-    font-size: 15px;
-    border-radius: 20px;
-    margin-top: 5px;
-    margin-right:5px;
-
+    font-size: 20px;
+    border-radius: 30px;
+    margin: 5px 5px;
+   padding: 5px 5px;
 }
 .btn:hover{
     background-color: black;
