--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,119 @@
-body,html{
-background-image: url("aloogobi.jpeg");
-background-size: cover;
-background-position: center;
-background-repeat: no-repeat;
-background-color: aqua;
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
 }
-.div1{
-    display: flex;
-    justify-content: right;
-    color:white;
-    margin-left: 10px;
-    font-size: 40px;
-    background-color: rgb(83, 82, 82);
-    
+::selection{
+  color: #000;
+  background: #fff;
 }
-ul{
-    display: flex;
+nav{
+  position: fixed;
+  background: #1b1b1b;
+  width: 100%;
+  padding: 10px 0;
+  z-index: 12;
 }
-.logo{
-    font-size: 50px;
-    color: red;
-    border-bottom: 3px black;
-    border-radius: 40px;
+nav .menu{
+  max-width: 1250px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
 }
-.btn{
-    width:80px;
-    height: 50px;
-    border: 2px solid rgba(62, 210, 236, 0.801);
-    background-color: rgb(2, 28, 49);
-    color: white;
-    font-size: 20px;
-    border-radius: 30px;
-    margin: 5px 5px;
-   padding: 5px 5px;
+.menu .logo a{
+  text-decoration: none;
+  color: darkred;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: right;
 }
-.btn:hover{
-    background-color: black;
-    border: 3px rgba(250, 10, 10, 0.801);
-    cursor: pointer;
+.menu ul{
+  display: inline-flex;
 }
-.maindiv{
-    justify-content:space-around ;
-    color: black;
-
+.menu ul li{
+  list-style: none;
+  margin-left: 7px;
 }
-.maindiv .head{
-    font-size: 50px;
-    margin-left: 40px;
-
+.menu ul li:first-child{
+  margin-left: 0px;
 }
-footer{
-    background-color: #343a40;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    font-size:30px;
+.menu ul li a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.menu ul li a:hover{
+  background: #fff;
+  color: black;
+}
+.img{
+  background-image: url('images/panirparatha.jpeg')no-repeat ;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.img::before{
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+.center{
+  position: absolute;
+  top: 52%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 0 20px;
+  text-align: center;
+}
+.center .title{
+  color: #fff;
+  font-size: 55px;
+  font-weight: 600;
+}
+.center .sub_title{
+  color: #fff;
+  font-size: 52px;
+  font-weight: 600;
+}
+.center .btns{
+  margin-top: 20px;
+}
+.center .btns button{
+  height: 66px;
+  width: 170px;
+  border-radius: 5px;
+  border: none;
+  margin: 0 10px;
+  border: 2px solid white;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0 10px;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+}
+.center .btns button:first-child{
+  color: #fff;
+  background: none;
+}
+.btns button:first-child:hover{
+  background: red;
+  color: skyblue;
+}
+.center .btns button:last-child{
+  background: red;
+ color: rgb(45, 124, 214);
 }
