--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,8 @@ nav .menu{
   color: black;
 }
 .img{
-  background-image: url('images/panirparatha.jpeg')no-repeat ;
+  background-image: url('../images/panirparatha.jpeg');
+  background-repeat:no-repeat; 
   width: 100%;
   height: 100vh;
   background-size: cover;
