--- a/css/style.css
+++ b/css/style.css
@@ -55,13 +55,9 @@ nav .menu{
   color: black;
 }
 .img{
-  background-image: url('../images/panirparatha.jpeg');
-  background-repeat:no-repeat; 
+  background-image: url('../images/banner.jpg')no-repeat ;
   width: 100%;
-  height: 100vh;
   background-size: cover;
-  background-position: center;
-  position: relative;
 }
 .img::before{
   content: '';
