--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,8 @@ nav .menu{
   color: black;
 }
 .img{
-  background-image: url('../images/banner.jpg')no-repeat ;
+  background-image: url('../images/banner.jpg');
+  background-repeat: no-repeat;
   width: 100%;
   background-size: cover;
 }
