--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ nav .menu{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 0px;
 }
 .menu .logo a{
   text-decoration: none;
@@ -55,9 +55,13 @@ nav .menu{
   color: black;
 }
 .img{
-  background-image: url('../images/banner.jpg')no-repeat ;
+  background-image: url('../images/panirparatha.jpeg');
+  background-repeat:no-repeat; 
   width: 100%;
+  height: 100vh;
   background-size: cover;
+  background-position: center;
+  position: relative;
 }
 .img::before{
   content: '';
@@ -89,15 +93,13 @@ nav .menu{
   margin-top: 20px;
 }
 .center .btns button{
-  height: 66px;
-  width: 170px;
   border-radius: 5px;
   border: none;
   margin: 0 10px;
-  border: 2px solid white;
+  border: none;
   font-size: 20px;
   font-weight: 500;
-  padding: 0 10px;
+  padding:20px 30px;
   cursor: pointer;
   outline: none;
   transition: all 0.3s ease;
@@ -108,9 +110,10 @@ nav .menu{
 }
 .btns button:first-child:hover{
   background: red;
-  color: skyblue;
+  color:black;
 }
 .center .btns button:last-child{
   background: red;
- color: rgb(45, 124, 214);
+ color:white;
+ width: 250px;
 }
