--- a/css/starters.css
+++ b/css/starters.css
@@ -1,103 +1,176 @@
-@media screen and (min-width:992px){
-    .content{
-        display: flex;
-    }
+@media screen and (min-width:992px) {
+  .content {
+    display: flex;
+  }
 
 }
-@media screen and (max-width:992px){
-    .content{
-        flex-wrap: wrap;
-    }
+
+@media screen and (max-width:992px) {
+  .content {
+    flex-wrap: wrap;
+  }
 }
 
 body {
-    background-color: black;
-    margin: 0;
-    padding: 0;
+  background-color: black;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    background-color: white;
-    width: 96%;
-    margin: 0 auto;
-    border-radius: 30px;
+  background-color: white;
+  width: 96%;
+  margin: 0 auto;
+  border-radius: 30px;
 }
 
 .page-heading {
-    text-align: center;
-    font-size: 50px;
-    padding: 20px;
-    width: 90%;
+  text-align: center;
+  font-size: 50px;
+  padding: 20px;
+  width: 90%;
 
 }
 
 .main-img img {
-    height: 600px;
-    position: sticky;
-    padding: 30px 0 30px 400px;
+  height: 600px;
+  position: sticky;
+  padding: 30px 0 30px 400px;
 }
 
 .container-1 {
-    background-color: white;
-    width: 20%;
-    margin: 30px 50px 50px 50px;
-    border-radius: 30px;
+  background-color: white;
+  width: 20%;
+  margin: 30px 50px 50px 50px;
+  border-radius: 30px;
 }
 
 .sub-heading {
-    font-size: 40px;
-    padding-left: 10px;
-    padding-top: 25px;
-    text-align: center;
+  font-size: 40px;
+  padding-left: 10px;
+  padding-top: 25px;
+  text-align: center;
 }
 
 li {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .steps li {
-    font-size: 25px;
-    padding: 20px;
+  font-size: 25px;
+  padding: 20px;
 }
 
 .sub {
-    font-size: 30px;
-    margin: 10px;
+  font-size: 30px;
+  margin: 10px;
 }
 
-.serve-img{
-    height: 500px;
-    display: block;
-    margin: 0 auto;
-    padding: 10px;
+.serve-img {
+  height: 500px;
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
 }
+
 .steps-img {
-    height: 400px;
-    display: block;
-    margin: 0 auto;
-    padding: 10px;
+  height: 400px;
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 p {
-    font-size: 25px;
-    padding: 10px;
-    text-align: center;
+  font-size: 25px;
+  padding: 10px;
+  text-align: center;
 }
 
-.btn{
-    padding: 20px 30px;
-    background-color: black;
-    color: white;
-    font-weight: bold;
-    border-radius: 20px;
-    border: none;
-    font-size: 20px;
-    display: block;
-    margin: 0 auto;
+.btn {
+  padding: 20px 30px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  border-radius: 20px;
+  border: none;
+  font-size: 20px;
+  display: block;
+  margin: 0 auto;
 }
 
-.btn:hover{
-    background-color: white;
-    color: black;
-    border: 1px solid black;
+.btn a {
+  color: #fff;
+}
+
+a button {
+  text-decoration: none;
+}
+
+.btn:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.btn a:hover {
+  color: black;
+}
+
+::selection {
+  color: #000;
+  background: #fff;
+}
+
+nav {
+  background: black;
+  width: 100%;
+  padding: 10px 0;
+  z-index: 12;
+}
+
+nav .menu {
+  max-width: 1250px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.menu .logo a {
+  text-decoration: none;
+  color: tomato;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: right;
+}
+
+.menu ul {
+  display: inline-flex;
+}
+
+.menu ul li {
+  list-style: none;
+  margin-left: 7px;
+  justify-content: space-around;
+}
+
+.menu ul li:first-child {
+  margin-left: 0px;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 25px;
+  font-weight: 500;
+  padding: 8px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  justify-content: space-around;
+}
+
+.menu ul li a:hover {
+  background: #fff;
+  color: black;
 }
