--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 nav{
   position: fixed;
-  background: #1b1b1b;
+  background:black;
   width: 100%;
   padding: 10px 0;
   z-index: 12;
@@ -26,7 +26,7 @@ nav .menu{
 }
 .menu .logo a{
   text-decoration: none;
-  color: darkred;
+  color:tomato;
   font-size: 35px;
   font-weight: 600;
   text-align: right;
@@ -93,17 +93,39 @@ nav .menu{
   padding: 20px 30px;
   cursor: pointer;
   outline: none;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease;  
+  border: 1px solid black;
 }
 .center .btns button:first-child{
   color: #fff;
   background: none;
 }
 .btns button:first-child:hover{
-  background: red;
-  color: white
+  background:tomato;
+  color: white;
 }
 .center .btns button:last-child{
-  background: red;
+  background: tomato;
  color: black
+}
+button{
+  padding: 20px 30px;
+  border-radius: 30px;
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 50px auto;
+}
+button:hover{
+  background-color: white;
+  color: black;
+}
+footer{
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+}
+a{
+  text-decoration: none;
 }
