--- a/css/community.css
+++ b/css/community.css
@@ -22,6 +22,7 @@ body {
     width: 70%;
     margin: 10px auto;
     border-radius: 30px;
+    padding: 10px;
 }
 
 .page-headings {
@@ -65,11 +66,16 @@ form{
 }
 input{
     font-size: 20px;
-    margin-left: 150px;
     padding: 10px;
     width: 70%;
+    display: block;    
+    margin: 5px auto;
+    text-align: center;
 }
-
+h1{
+    
+    text-align: center;
+}
 .btn {
     padding: 20px 30px;
     background-color: black;
