--- a/css/community.css
+++ b/css/community.css
@@ -59,23 +59,27 @@ h2 {
     justify-content: space-around;
     margin-bottom: 20px;
 }
-form{
+
+form {
     font-size: 30px;
     margin-left: 50px;
     padding: 10px;
 }
-input{
+
+input {
     font-size: 20px;
     padding: 10px;
     width: 70%;
-    display: block;    
+    display: block;
     margin: 5px auto;
     text-align: center;
 }
-h1{
-    
+
+h1 {
+
     text-align: center;
 }
+
 .btn {
     padding: 20px 30px;
     background-color: black;
@@ -87,4 +91,16 @@ h1{
     display: block;
     border: none;
     margin: 0px auto;
-  }
+}
+
+.card {
+    background-color: white;
+    width: 20%;
+    margin: 20px auto;
+    text-align: center;
+    border-radius: 30px;
+}
+
+.card a{
+    font-size: 40px;
+}
