--- a/css/starters.css
+++ b/css/starters.css
@@ -20,8 +20,9 @@ body {
 .container {
   background-color: white;
   width: 96%;
-  margin: 0 auto;
+  margin: 10px auto;
   border-radius: 30px;
+  padding: 10px;
 }
 
 .page-heading {
@@ -29,19 +30,22 @@ body {
   font-size: 50px;
   padding: 20px;
   width: 90%;
-  display: block;
   margin: 0 auto;
 }
 
 .main-img img {
   height: 600px;
-  position: sticky;
-  padding: 30px 0 30px 400px;
+  padding: 30px;
+}
+
+.content{
+  flex-direction: row;
+  justify-content: center;
 }
 
 .container-1 {
   background-color: white;
-  width: 20%;
+  width: 30%;
   margin: 30px 50px 50px 50px;
   border-radius: 30px;
 }
@@ -54,6 +58,7 @@ body {
 
 li {
   font-size: 25px;
+  text-align: center;
 }
 
 .steps li {
