--- a/css/starters.css
+++ b/css/starters.css
@@ -20,9 +20,9 @@ body {
 .container {
   background-color: white;
   width: 96%;
-  margin: 10px auto;
+  margin: 20px auto;
   border-radius: 30px;
-  padding: 10px;
+  padding: 2px;
 }
 
 .page-heading {
@@ -52,13 +52,12 @@ body {
 
 .sub-heading {
   font-size: 40px;
-  padding: 25px 10px;
+  padding: 0 10px;
   text-align: center;
 }
 
 li {
   font-size: 25px;
-  text-align: center;
 }
 
 .steps li {
